# guitar_tracker

./: .gitignore  .impeccable.md  test_song_download.py
.cursor/rules/: impeccable-workflow.mdc
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  spotdl
backend/alembic/: env.py
backend/alembic/versions/: 001_add_song_download_fields.py  002_add_download_started_at.py  003_add_last_accessed_at.py  004_dedupe_songs_and_unique_spotify.py  005_add_song_bpm.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  base.py  bookmark.py  chord_chart.py  exercise.py  exercise_bpm_log.py  practice_session.py  recording.py  song.py  user.py
backend/app/routers/: auth.py  bookmarks.py  chord_charts.py  exercises.py  files.py  practice_sessions.py  recordings.py  songs.py  spotify.py
backend/app/schemas/: auth.py  bookmark.py  chord_chart.py  exercise.py  practice_session.py  recording.py  song.py
backend/app/services/: auth_service.py  spotify_service.py  storage_service.py  ytdlp_service.py
backend/app/utils/: jwt.py  pagination.py
backend/scripts/: test_download.py  test_ultimate_api.py  test_ytdlp_download.py
backend/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_exercises.py  test_songs.py
deploy/: README.md  logs.sh  setup.sh
deploy/systemd/: guitar-tracker-backend.service  guitar-tracker-frontend.service  traefik.service
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
memory/: MEMORY.md  project_guitar_tracker.md
(+54 files in other folders)
