[project]
name = "guitar-tracker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "aiomysql==0.2.0",
    "cryptography==43.0.3",
    "pydantic==2.10.1",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.0",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "aiofiles==24.1.0",
    "python-slugify==8.0.4",
    "yt-dlp[default]>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
